--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -7,16 +7,15 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.tamimattafi.pizza.android"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0.0"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
         release {
-            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -33,6 +32,7 @@ android {
 }
 
 dependencies {
-    implementation "androidx.constraintlayout:constraintlayout:2.1.1"
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
 }
