--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,7 +35,22 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    //Local storage
+    def room_version = "2.3.0"
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    //Http client
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //JSON Serialization
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.4"
+    implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
+
+    //RxJava
+    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+    implementation project(':domain')
 }
