--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,8 +35,17 @@ android {
 }
 
 dependencies {
+    //SQLite (room)
+    def room_version = "2.3.0"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     //RxJava
     implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "androidx.room:room-rxjava3:$room_version"
 
-    implementation project(':domain')
+    //Logic
+    implementation project(":domain")
+    implementation project(":data")
 }
