--- a/data/build.gradle
+++ b/data/build.gradle
@@ -9,7 +9,7 @@ java {
 }
 
 dependencies {
-    //RxJava
+    //RxJava for JVM, platform-independent
     implementation "io.reactivex.rxjava3:rxjava:3.1.2"
     implementation project(':domain')
 }
