--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
 }
 
 dependencies {
-    implementation "androidx.constraintlayout:constraintlayout:2.1.1"
     implementation "androidx.appcompat:appcompat:1.3.1"
+
+    //Logic
+    implementation project(":data")
+    implementation project(":domain")
+
+    //Presentation
+    implementation project(":presentation")
 }
