--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -35,9 +36,31 @@ android {
 dependencies {
     implementation "androidx.appcompat:appcompat:1.3.1"
 
+    //DI with Dagger2 for Android
+    implementation 'com.google.dagger:dagger-android:2.38.1'
+    implementation 'com.google.dagger:dagger-android-support:2.38.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.38.1'
+    kapt 'com.google.dagger:dagger-compiler:2.38.1'
+
+    //SQLite (room)
+    def room_version = "2.3.0"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     //Logic
     implementation project(":data")
+    implementation project(":data:local")
+    implementation project(":data:remote")
     implementation project(":domain")
+
+    //Http client
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+    //JSON Serialization
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.4"
+    implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
 
     //Presentation
     implementation project(":presentation")
