--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -29,10 +30,41 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    //Android core
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    //Material
     implementation 'com.google.android.material:material:1.4.0'
+
+    //Mvvm
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+
+    //RxJava for JVM and Android
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
+
+    //DI with Dagger2 for Android
+    implementation 'com.google.dagger:dagger-android:2.38.1'
+    implementation 'com.google.dagger:dagger-android-support:2.38.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.38.1'
+    kapt 'com.google.dagger:dagger-compiler:2.38.1'
+
+    // Binding
+    implementation("com.github.kirich1409:viewbindingpropertydelegate:1.5.2")
+    implementation("com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.2")
+
+    //Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //Business Logic
+    implementation project(":domain")
 }
