--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.38.1'
 
     //SQLite (room)
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-beta01"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
