--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     //SQLite (room)
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-beta01"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
