--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,12 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    //Android core
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    //Material
+    implementation 'com.google.android.material:material:1.4.0'
 
     //DI with Dagger2 for Android
     implementation 'com.google.dagger:dagger-android:2.38.1'
