fix: Add connection manager to refresh data

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 buildscript {
+    ext {
+        rxJavaVersion = "1."
+    }
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
