--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.4"
     implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
 
+    //RxJava for JVM and Android
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
+
     //Presentation
     implementation project(":presentation")
 }
