--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,24 @@
 buildscript {
     ext {
-        rxJavaVersion = "1."
+        //Data
+        room_version = "2.4.0-beta01"
+        retrofit_version = "2.9.0"
+        jackson_version = "2.12.4"
+        jackson_retrofit_version = "2.4.0"
+
+        //Common
+        rx_android_version = "3.0.0"
+        rx_version = "3.1.2"
+
+        //Android
+        binding_version = "1.5.2"
+        dagger_version = "2.38.1"
+        material_version = "1.4.0"
+        app_compat_version = "1.3.1"
+        android_core_version = "1.7.0"
+        lifecycle_version = "2.4.0"
+        zoom_image_version = "3.1.1"
+        glide_version = "4.12.0"
     }
 
     repositories {
