--- a/data/build.gradle
+++ b/data/build.gradle
@@ -10,6 +10,8 @@ java {
 
 dependencies {
     //RxJava for JVM, platform-independent
-    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_version"
+
+    //Business logic
     implementation project(':domain')
 }
