--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -36,13 +36,10 @@ android {
 
 dependencies {
     //SQLite (room)
-    def room_version = "2.4.0-beta01"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
 
     //RxJava
-    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_version"
     implementation "androidx.room:room-rxjava3:$room_version"
 
     //Logic
