--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,5 +10,5 @@ java {
 
 dependencies {
     //RxJava for JVM, platform-independent
-    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_version"
 }
