--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -39,35 +39,31 @@ android {
 
 dependencies {
     //Android core
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "androidx.core:core-ktx:$android_core_version"
+    implementation "androidx.appcompat:appcompat:$app_compat_version"
 
     //Material
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation "com.google.android.material:material:$material_version"
 
     //Zoom image view
-    implementation 'com.github.MikeOrtiz:TouchImageView:3.1.1'
+    implementation "com.github.MikeOrtiz:TouchImageView:$zoom_image_version"
 
     //Mvvm
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
-    //RxJava for JVM and Android
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
+    //RxJava for Android
+    implementation "io.reactivex.rxjava3:rxandroid:$rx_android_version"
 
     //DI with Dagger2 for Android
-    implementation 'com.google.dagger:dagger-android:2.38.1'
-    implementation 'com.google.dagger:dagger-android-support:2.38.1'
-    kapt 'com.google.dagger:dagger-android-processor:2.38.1'
-    kapt 'com.google.dagger:dagger-compiler:2.38.1'
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
 
-    // Binding
-    implementation("com.github.kirich1409:viewbindingpropertydelegate:1.5.2")
-    implementation("com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.2")
+    //Binding
+    implementation("com.github.kirich1409:viewbindingpropertydelegate:$binding_version")
+    implementation("com.github.kirich1409:viewbindingpropertydelegate-noreflection:$binding_version")
 
     //Glide for image loading
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     //Business Logic
     implementation project(":domain")
