--- a/data/local/src/main/AndroidManifest.xml
+++ b/data/local/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tamimattafi.pizza.android.data.local">
+<manifest package="com.tamimattafi.pizza.android.data.local">
 
 </manifest>
