--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0.0"
+        buildConfigField("String", "API_URL", "\"https://springboot-kotlin-demo.herokuapp.com/\"")
     }
 
     buildTypes {
